--- a/src/styles-ionic/components/_search.scss
+++ b/src/styles-ionic/components/_search.scss
@@ -42,6 +42,11 @@ html[data-theme='dark'] {
     [class^='navbarSearchContainer_'] {
       position: static;
       right: initial;
+      max-width: 100%;
+      flex-grow: 0;
+      flex-shrink: 1;
+      min-width: 0;
+      margin-right: 0.5rem;
     }
   }
 
@@ -49,6 +54,16 @@ html[data-theme='dark'] {
     width: 100%;
     border-radius: 8px;
     box-shadow: var(--docsearch-searchbox-shadow);
+
+    @media (max-width: 996px) {
+      min-width: 8rem;
+      max-width: 12rem;
+    }
+
+    @media (max-width: 640px) {
+      min-width: 6rem;
+      max-width: 9rem;
+    }
 
     .DocSearch-Button-Keys {
       min-width: 0;
@@ -59,6 +74,10 @@ html[data-theme='dark'] {
       padding: 0.125rem;
       border: 1px solid var(--search-keys-border-c);
       border-radius: 6px;
+
+      @media (max-width: 996px) {
+        display: none;
+      }
 
       .DocSearch-Button-Key {
         position: static;
